--- a/Hello/templates/services.html
+++ b/Hello/templates/services.html
@@ -1,5 +1,158 @@
 {% extends 'base.html'%}
 {% block title %}Services{%endblock title %}
-{%block body%}
-this is a Services block!
+{% block body %} 
+<div class="container-fluid px-0 ">
+    <img src="https://source.unsplash.com/1200x400/?icecream" class="d-block w-100 mx-0" alt="...">
+</div>
+<div class="container  ">
+    <h1 class="text-center">Our Services</h1>
+</div>
+<div class="container my-3">
+    <h1 class="my-2 text-center">SELECT FROM OUR RANGE OF ICECREAMS.</h1>
+     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+       <div class="col">
+         <div class="card shadow-sm">
+           <img src="https://source.unsplash.com/1200x900/?chocolate" class="d-block w-100" alt="...">
+           <div class="card-body">
+             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+             <div class="d-flex justify-content-between align-items-center">
+               <div class="btn-group">
+                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+               </div>
+               <small class="text-muted">9 mins</small>
+             </div>
+           </div>
+         </div>
+       </div>
+       <div class="col">
+         <div class="card shadow-sm">
+           <img src="https://source.unsplash.com/1200x900/?icecream" class="d-block w-100" alt="...">
+   
+           <div class="card-body">
+             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+             <div class="d-flex justify-content-between align-items-center">
+               <div class="btn-group">
+                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+               </div>
+               <small class="text-muted">9 mins</small>
+             </div>
+           </div>
+         </div>
+       </div>
+       <div class="col">
+         <div class="card shadow-sm">
+            <img src="https://source.unsplash.com/1200x900/?icecream" class="d-block w-100" alt="...">
+           <div class="card-body">
+             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+             <div class="d-flex justify-content-between align-items-center">
+               <div class="btn-group">
+                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+               </div>
+               <small class="text-muted">9 mins</small>
+             </div>
+           </div>
+         </div>
+       </div>
+   
+       <div class="col">
+         <div class="card shadow-sm">
+           <img src="https://source.unsplash.com/1200x900/?chocolate,icecream" class="d-block w-100" alt="...">
+   
+           <div class="card-body">
+             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+             <div class="d-flex justify-content-between align-items-center">
+               <div class="btn-group">
+                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+               </div>
+               <small class="text-muted">9 mins</small>
+             </div>
+           </div>
+         </div>
+       </div>
+       <div class="col">
+         <div class="card shadow-sm">
+           <img src="https://source.unsplash.com/1200x900/?icecream" class="d-block w-100" alt="...">
+   
+           <div class="card-body">
+             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+             <div class="d-flex justify-content-between align-items-center">
+               <div class="btn-group">
+                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+               </div>
+               <small class="text-muted">9 mins</small>
+             </div>
+           </div>
+         </div>
+       </div>
+       <div class="col">
+         <div class="card shadow-sm">
+           <img src="https://source.unsplash.com/1200x900/?icecream" class="d-block w-100" alt="...">
+   
+           <div class="card-body">
+             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+             <div class="d-flex justify-content-between align-items-center">
+               <div class="btn-group">
+                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+               </div>
+               <small class="text-muted">9 mins</small>
+             </div>
+           </div>
+         </div>
+       </div>
+   
+       <div class="col">
+         <div class="card shadow-sm">
+           <img src="https://source.unsplash.com/1200x900/?icecream" class="d-block w-100" alt="...">
+   
+           <div class="card-body">
+             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+             <div class="d-flex justify-content-between align-items-center">
+               <div class="btn-group">
+                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+               </div>
+               <small class="text-muted">9 mins</small>
+             </div>
+           </div>
+         </div>
+       </div>
+       <div class="col">
+         <div class="card shadow-sm">
+           <img src="https://source.unsplash.com/1200x900/?icecream" class="d-block w-100" alt="...">
+   
+           <div class="card-body">
+             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+             <div class="d-flex justify-content-between align-items-center">
+               <div class="btn-group">
+                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+               </div>
+               <small class="text-muted">9 mins</small>
+             </div>
+           </div>
+         </div>
+       </div>
+       <div class="col">
+         <div class="card shadow-sm">
+           <img src="https://source.unsplash.com/1200x900/?icecream" class="d-block w-100" alt="...">
+           <div class="card-body">
+             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+             <div class="d-flex justify-content-between align-items-center">
+               <div class="btn-group">
+                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+               </div>
+               <small class="text-muted">9 mins</small>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
 {% endblock body%}
